[package]
name = "reverseping"
version = "0.1.0"
authors = ["Alex Grinman <alex@reverseping.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librp = { path = "../librp" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
chrono = "0.4.11"
pretty_env_logger = "0.4.0"
thiserror = "1.0"
sha2 = "0.9.0"
reqwest = { version = "0.11.4", features = ["json"] }
hex = "0.4.3"
rand = "0.8"
async-trait = "0.1.50"
itertools = "0.10"
ifcfg = "0.1.2"
ipnetwork = "0.18.0"
surge-ping = "0.2.2"
trust-dns-resolver = { version ="0.20", features = ["mdns", "rustls"] }
trust-dns-client = { version ="0.20", features = ["mdns", "rustls"] }
arp-toolkit = "0.2.0"
ssdp-client = "1.0.0"
serde-xml-rs = "0.4.1"
url = "2.2"
structopt = "0.3"
sudo = "0.6.0"
askama = "0.10.5"
directories = "3.0"
whoami = "1.0"
toml = "0.5.8"